--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 <title>软件推荐</title>
 </head>
 <body>
-	<h1 align="center">软件推荐</h1>
+	h1 align="center">软件推荐</h1>
 	<h2 align="center">主人：迷你世界一铭吖</h2>
 	<h1 align="center">办公</h1>
     <h2>office</h2>
     <a href="https://www.123684.com/s/0smyjv-rCqN">下载（123网盘）</a>
+	<link href="https://www.123684.com/s/0smyjv-rCqN" rel="stylesheet">
+	<style>/*  <a>  */ a { /* GILLUBCD.TTF */ font-family: 'Arial', sans-serif; font-size: 16px; color: #FF9EEF;  text-decoration: none; position: relative; padding: 8px 16px; transition: color 0.3s ease, background-color 0.3s ease; border-radius: 4px; }  a:hover { color: #FFFFFF;  background-color: #FF9EEF; }  a::after { content: ''; position: absolute; width: 100%; transform: scaleX(0); height: 2px; bottom: 0; left: 0; background-color: #FF9EEF; transform-origin: bottom right; transition: transform 0.25s ease-out; }  a:hover::after { transform: scaleX(1); transform-origin: bottom left; }</style>
     <h2>WPS office</h2>
     <a href="https://platform.wps.cn/">下载（官网）</a>
     <h2>剪映专业版5.9.0</h2>
@@ -49,7 +51,7 @@
     <a href="https://www.123684.com/s/0smyjv-TPVN">下载（123网盘）</a>
 	<h1>网站主人介绍</h1>
 	<h2>这是我的第一个网站，希望大家多推荐，我才有继续制作视频和网站的经历</h2>
-	<a href="https://www.douyin.com/user/self?from_tab_name=main&showTab=post">点击打开网站主人抖音</a>
+	<a href="https://www.douyin.com/user/self?from_tab_name=main&amp;showTab=post">点击打开网站主人抖音</a>
 	<a href="https://www.xiaohongshu.com/user/profile/602b5ecd000000000101f886">点击打开网站主人小红书</a>
 </body>
 </html>
