--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <a href="https://pan.huang1111.cn/s/E7zo2Ib">下载（huang1111网盘）</a>
     <a href="https://www.123684.com/s/0smyjv-yGVN">下载（123网盘）</a>
     <h2>Adobe Dreamweaver 2021</h2>
-    <a href="https://www.123684.com/s/0smyjv-iCqN">下载（123网盘）</a>
+    <a href="https://miniymy1.github.io/Mini_ym/111.html">下载</a>
 	<h1 align="center">游戏</h1>
     <h2>迷你世界0.44.2版本</h2>
     <p>迷你世界的老版本（PC端）最老版本————0.44.2</p>
