--- a/112.html
+++ b/112.html
@@ -13,6 +13,6 @@
 	<p>发布时间：2018/10/01</p>
 	<p>提供：柠栀游戏解说<p>
 	<style>/*  <a>  */ a {  GILLUBCD.TTF font-family: 'Arial', sans-serif; font-size: 16px; color: #FF9EEF;  text-decoration: none; position: relative; padding: 8px 16px; transition: color 0.3s ease, background-color 0.3s ease; border-radius: 4px; }  a:hover { color: #FFFFFF;  background-color: #FF9EEF; }  a::after { content: ''; position: absolute; width: 100%; transform: scaleX(0); height: 2px; bottom: 0; left: 0; background-color: #FF9EEF; transform-origin: bottom right; transition: transform 0.25s ease-out; }  a:hover::after { transform: scaleX(1); transform-origin: bottom left; }</style>
-	<a href="https://59-47-225-53.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-914/ca2bc067/1816369981-0/ca2bc0674323139d9211d0eda8c5ab92/c-m19?v=1&t=1736857099&s=051a2b961c49609be6e3f3f30b9c20a8&bzc=1&bzs=1831598833&filename=ps+CC.zip&x-mf-biz-cid=a0cc7211-c192-4f68-af14-f0ecb8c8b4e0-a0d664&cache_type=1&xmfcid=bb5e84eb-fb70-44df-a9c2-2da57b418d02-0-abf611255">Adobe Photoshop 2019</a>
+	<a href="https://59-47-225-55.pd1.cjjd19.com:30443/download-cdn.cjjd19.com/123-888/21206411/1816369981-0/21206411b7432436860b4745af060f78/c-m54?v=1&t=1736857524&s=74054cb05dd089cd115ce7b85fb7a7db&bzc=1&bzs=1831598833&filename=ps+2019.zip&x-mf-biz-cid=942b19d2-fe8a-4e33-85ea-ed2e1e124d98-47df1e&cache_type=1&xmfcid=de0d73c3-0235-47ac-9caf-4b69a5049c6a-1-9eed82220">Adobe Photoshop 2019</a>
 </body>
 </html>
