--- a/01.html
+++ b/01.html
@@ -39,8 +39,7 @@
     <a href="https://pan.huang1111.cn/s/5XYR1tl">下载（huang1111网盘）</a>
     <a href="https://www.123684.com/s/0smyjv-dPVN">下载（123网盘）</a>
     <h2>迷你世界0.52.1版本</h2>
-    <a href="https://pan.huang1111.cn/s/Nk3wlI1">下载（huang1111网盘）</a>
-    <a href="https://www.123684.com/s/0smyjv-3PVN">下载（123网盘）</a>
+    <a href="https://miniymy1.github.io/Mini_ym/113.html">下载</a>
     <h2>迷你世界1.26.5版本</h2>
     <a href="https://pan.huang1111.cn/s/lajVKTL">下载（huang1111网盘）</a>
     <a href="https://www.123684.com/s/0smyjv-QPVN">下载（123网盘）</a>
