--- a/01.html
+++ b/01.html
@@ -19,7 +19,7 @@
     <a href="https://www.123684.com/s/0smyjv-VGVN">下载（123网盘）</a>
 	<h1 align="center">Adobe</h1>
     <h2>Adobe Photoshop 2019</h2>
-    <a href="https://miniymy1.github.io/Mini_ym/112.html">下载</a>
+    <a href="https://cagh2025.github.io/Mini_ym/112.html">下载</a>
     <h2>Adobe Illustrator 2024</h2>
     <a href="https://www.123684.com/s/0smyjv-HPVN">下载（123网盘）</a>
     <h2>Adobe Premiere Pro 2024</h2>
@@ -32,17 +32,15 @@
     <a href="https://pan.huang1111.cn/s/E7zo2Ib">下载（huang1111网盘）</a>
     <a href="https://www.123684.com/s/0smyjv-yGVN">下载（123网盘）</a>
     <h2>Adobe Dreamweaver 2021</h2>
-    <a href="https://miniymy1.github.io/Mini_ym/111.html">下载</a>
+    <a href="https://cagh2025.github.io/Mini_ym/111.html">下载</a>
 <h1 align="center">游戏</h1>
     <h2>迷你世界0.44.2版本</h2>
     <p>迷你世界的老版本（PC端）最老版本————0.44.2</p>
-    <a href="https://pan.huang1111.cn/s/5XYR1tl">下载（huang1111网盘）</a>
-    <a href="https://www.123684.com/s/0smyjv-dPVN">下载（123网盘）</a>
+    <a href="https://cagh2025.github.io/Mini_ym/114.html">下载</a>
     <h2>迷你世界0.52.1版本</h2>
-    <a href="https://miniymy1.github.io/Mini_ym/113.html">下载</a>
+    <a href="https://cagh2025.github.io/Mini_ym/113.html">下载</a>
     <h2>迷你世界1.26.5版本</h2>
-    <a href="https://pan.huang1111.cn/s/lajVKTL">下载（huang1111网盘）</a>
-    <a href="https://www.123684.com/s/0smyjv-QPVN">下载（123网盘）</a>
+    <a href="https://cagh2025.github.io/Mini_ym/115.html">下载</a>
 	<h1 align="center">编程</h1>
     <h2>Scratch3.0</h2>
     <a href="https://pan.huang1111.cn/s/mxja8s1">下载（huang1111网盘）</a>
